[project]
name = "loteria-luna"
version = "0.1.0"
description = "Este proyecto permite un seguimiento preciso de los premios entregados y de los impuestos asociados, brindando transparencia y claridad en el proceso de reclamación de premios en el juego de lotería."
authors = [
    {name = "santiDev",email = "xantirendonc@gmail.com"},
    {name = "manusolis04",email = "manuelasolis.08@hotmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "mysql-connector-python (>=9.3.0,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
